--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "incrementer",
   "main": "start.js",
+  "bin": {
+    "app": "./start.js"
+  },
   "scripts": {
     "start": "nodemon ./start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +18,8 @@
     "nodemon": "^1.18.4",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1"
+  },
+  "pkg": {
+    "assets": "public/*"
   }
 }
