--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "ip": "^1.1.5",
     "nodemon": "^1.18.4",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1"
   },
   "pkg": {
-    "assets": ["public/*", "views/*"]
+    "assets": [
+      "public/*",
+      "views/*"
+    ]
   }
 }
